# IOHGNBG

./: README.md  a.ipynb  pyproject.toml  run_modcma.py
.github/workflows/: test.yml
gnbg/: interface.cpp  setup.py
gnbg/gnbg/: __init__.py
gnbg/tests/: test_can_load.py
src/iohgnbg/: gnbg_base.py
src/iohgnbg/static/GECCO_2025/: f11.txt  f12.txt  f13.txt  f14.txt  f15.txt  f16.txt  f17.txt  f18.txt  f19.txt  f2.txt  f21.txt  f22.txt  f23.txt  f24.txt  f3.txt  f4.txt  f5.txt  f7.txt  f8.txt  f9.txt
tests/: test_gnbg_base.py
tutorials/: random_search_tutorial.ipynb
