[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iohgnbc"
version = "0.0.1"
authors = [
]
description = "Package for IOH GNBC problems"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "ioh",
  "numpy",
  "scipy"
]

[tool.setuptools]
package-dir = {"" = "src"}


[tool.setuptools.package-data]
"iohclustering" = ["static/*.txt"]


[project.optional-dependencies]
test = [
  "coverage",
]
